force-app/main/default/objects/Plan_Variation_Count__mdt/Plan_Variation_Count__mdt.object-meta.xml
<CustomObject>
    <label>Capacity Plan-Plan Variation Count</label>
    <pluralLabel>Capacity Plan-Plan Variation Count</pluralLabel>
</CustomObject>