force-app/main/default/objects/Plan_Variation_Count__mdt/fields/Current_Weighting__c.field-meta.xml
<CustomField>
    <fullName>Current_Weighting__c</fullName>
    <description>based on salary grade and years of experience ,current weighting will be calculated</description>
    <label>Current Weighting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>