force-app/main/default/objects/Plan_Variation_Count__mdt/fields/PVC__c.field-meta.xml
<CustomField>
    <fullName>PVC__c</fullName>
    <label>PVC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>