force-app/main/default/objects/Plan_Variation_Count__mdt/fields/Weightage__c.field-meta.xml
<CustomField>
    <fullName>Weightage__c</fullName>
    <label>Weightage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>