force-app/main/default/objects/Plan_Variation_Count__mdt/fields/YOP__c.field-meta.xml
<CustomField>
    <fullName>YOP__c</fullName>
    <description>years of experience-&lt;1 year and &gt;1 year</description>
    <label>YOP</label>
    <length>200</length>
    <type>Text</type>
</CustomField>