force-app/main/default/objects/Plan_Variation_Count__mdt/listViews/Weights.listView-meta.xml
<ListView>
    <fullName>Weights</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Weightage__c</columns>
    <columns>Start_Range__c</columns>
    <columns>End_Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>Weights</label>
</ListView>